Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11710

thd_destructor_proxy() hangs on shutdown after aborted startup

    XMLWordPrintable

Details

    Description

      When MariaDB Server is started with an invalid option that causes InnoDB startup to be aborted, the thd_destructor_proxy() thread (which was introduced in MDEV-5800) gets stuck, causing an error message and assertion failure:

      Error in my_thread_global_end(): 1 threads didn't exit
       
      mysqld: /home/marko/mariadb/server/sql/mysqld.cc:2154: void mysqld_exit(int): Assertion `global_status_var.global_memory_used == 0' failed.
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.