MDEV-11710 thd_destructor_proxy() hangs on shutdown after aborted startup

create thd_destructor_proxy thread only after InnoDB has successfully
started up